read_csv instead of tt_load

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,13 @@ The data load. This is a list of three data frames as per the tidytuesday page
 <https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-09-08/readme.md>
 
 ```{r, message=FALSE}
-tuesdata <- tidytuesdayR::tt_load('2020-09-08')
+# tt_load only allows 10 downloads in 24h
+#tuesdata <- tidytuesdayR::tt_load('2020-09-08')
+
+# these are the direct download calls
+friends <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-09-08/friends.csv')
+friends_emotions <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-09-08/friends_emotions.csv')
+info <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-09-08/friends_info.csv')
 
 ```
 
@@ -29,7 +35,6 @@ tuesdata <- tidytuesdayR::tt_load('2020-09-08')
 * the superbowl assisted ratings boost in season 2 <https://en.wikipedia.org/wiki/The_One_After_the_Superbowl>
 
 ```{r}
-info <- tuesdata$friends_info
 
 # subset frame to identify the "superbowl" episodes in season 2
 sb <- info[grep("Superbowl", info$title),]
@@ -48,8 +53,6 @@ how many times each character mentions the other characters.
 
 ```{r}
 # the "quotes" data
-friends <- tuesdata$friends
-
 # subset to quotes from the main characters
 main.characters <- c("Monica Geller", "Joey Tribbiani",
                      "Chandler Bing", "Phoebe Buffay", 
